--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: '3.3'
 
 services:
   postgres:
@@ -20,7 +20,7 @@ services:
       retries: 5
 
   appci:
-    image: golang:1.19-alpine
+    image: golang:1.19
     ports:
       - "80"
     volumes:
@@ -36,5 +36,4 @@ services:
       POSTGRES_DB: rpm
       POSTGRES_SSLMODE: disable
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
