added api key and secret and fixed response content type header to be appliaction json

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@ LOG_LEVEL=error
 APP_ENV=local
 APP_NAME=rpm
 APP_PORT=8080
-APP_LOG_DIR=/var/log/rpm
+
+API_KEY=key
+API_SECRET=secret
 
 POSTGRES_HOST=localhost
 POSTGRES_READ_REPLICA_HOST=postgres
