--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ POSTGRES_USER=rpm
 POSTGRES_PASSWORD=password
 POSTGRES_DB=rpm
 POSTGRES_SSLMODE=disable
+
+SERVICE_CERT_FILE=service.pem
+SERVICE_KEY_FILE=service.key
